--- a/src/css/lpg.css
+++ b/src/css/lpg.css
@@ -13,7 +13,7 @@ body{
     line-height: 1.6;
 }
 .header.lp{
-    background-image: url("/src/media/bg-lp.jpg");
+    background-image: url("/my-simples-html-templates/src/media/bg-lp.jpg");
     background-size: cover;
     background-position: center;
     height:100vh;
