--- a/src/css/lpg.css
+++ b/src/css/lpg.css
@@ -11,6 +11,8 @@ body{
     font-size:17px;
     color:var(--primary-color);
     line-height: 1.6;
+    width: 100%;
+    height: 100%;
 }
 .header.lp{
     background-image: url("/my-simples-html-templates/src/media/bg-lp.jpg");
@@ -89,7 +91,7 @@ body{
 .footer{
     background:#4d3c27;
     color:white;
-    width: 100vw;
+    width: 100%;
     text-align: center;
     padding:.5rem;
 }
